--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/settings_row_slider_switch.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/settings_row_slider_switch.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/SettingsRowContainer"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:layout_marginTop="8dp">
 
     <LinearLayout
