refactor: rename benchmark method and add states

--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/activity_main.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,8 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:layout_gravity="bottom"/>
+            android:layout_gravity="bottom"
+            android:background="@color/color_background"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <com.nambimobile.widgets.efab.ExpandableFabLayout
