--- a/apps/Android/MnnLlmChat/app/src/main/res/values/ip_colors.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/ip_colors.xml
@@ -1,5 +1,5 @@
 <resources>
-    <color name="md_theme_primary">#4252B6</color>
+    <color name="md_theme_primary">#4A90E2</color>
     <color name="md_theme_onPrimary">#FFFFFF</color>
     <color name="md_theme_primaryContainer">#224252B6</color>
     <color name="md_theme_onPrimaryContainer">#004D67</color>
