--- a/apps/Android/MnnLlmChat/app/src/main/res/values-night/ip_colors.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-night/ip_colors.xml
@@ -1,6 +1,6 @@
 <resources>
-    <color name="md_theme_primary">#4252B6</color>
-    <color name="md_theme_onPrimary">#003548</color>
+    <color name="md_theme_primary">#81C7F4</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
     <color name="md_theme_primaryContainer">#224252B6</color>
     <color name="md_theme_onPrimaryContainer">#C1E8FF</color>
     <color name="md_theme_secondary">#B5C9D7</color>
