--- a/apps/Android/MnnLlmChat/app/src/main/res/values/ip_themes.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/ip_themes.xml
@@ -7,7 +7,7 @@
         <item name="android:windowLightStatusBar">@bool/is_day_mode</item>
 
         <!-- 全局默认 BottomSheetDialog 主题 -->
-        <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>
+<!--        <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>-->
 
         <item name="colorPrimary">@color/md_theme_primary</item>
         <item name="colorOnPrimary">@color/md_theme_onPrimary</item>
