--- a/apps/Android/MnnLlmChat/app/src/main/res/values/styles.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/styles.xml
@@ -144,6 +144,7 @@
 
     <style name="BottomSheetDialogTheme" parent="Theme.Material3.DayNight.BottomSheetDialog">
         <item name="colorPrimary">@color/md_theme_primary</item>
+        <item name="colorSecondary">@color/md_theme_secondary</item>
         <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
     </style>
 
