refactor: update model market JSON and UI components

--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/activity_main.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?colorSurface">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
