--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/view_model_switcher.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/view_model_switcher.xml
@@ -5,12 +5,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:minHeight="30dp"
-    android:background="@drawable/bg_rounded_dropdown"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingStart="8dp"
     android:paddingEnd="4dp"
+    android:background="@null"
     tools:parentTag="android.widget.LinearLayout">
+<!--    android:background="@drawable/bg_rounded_dropdown"-->
 
 
     <TextView
@@ -18,8 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="150dp"
-        style="?textAppearanceBodySmall"
-        android:textSize="12sp"
+        style="?textAppearanceTitleMedium"
         android:singleLine="true"
         android:layout_marginEnd="4dp"
         android:ellipsize="end"
@@ -28,8 +28,8 @@
 
     <ImageView
         android:id="@+id/iv_dropdown_arrow"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         app:srcCompat="@drawable/ic_arrow_drop_down"
         app:tint="?colorOnSurface"/>
 
