--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/list_item_model_selection.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/list_item_model_selection.xml
@@ -45,6 +45,7 @@
             android:id="@+id/tags_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="24dp"
             android:layout_marginTop="2dp" />
 
     </LinearLayout>
