--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/recycle_item_market.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/recycle_item_market.xml
@@ -42,6 +42,7 @@
             android:id="@+id/tagsLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minHeight="16dp"
             android:layout_below="@id/tvModelTitle"
             android:layout_marginStart="14dp"
             android:layout_toEndOf="@id/header_section_title" />
